@@ -220,7 +220,7 @@ toc::[]
 * `TestRunner`: implements the running of tests and returns `TestResults`
 * `Testable`: wrapper around one of:
 ** `Test`: a named instance of a test, each test must return an `Assertion`
-** `TestSuite`: logical collection of a stream of ``Test``s
+** `TestSuite`: logical collection of a stream of ``Testable``s
 * `Assertion`: represents the expected state at the end of a test
 * `TestResults`: represents the combined result of your tests
 
@@ -288,7 +288,31 @@ The test will fail if the `Supplier` throws any exception at all. Please see <<N
 
 === Test Suites
 
-You can group your ``Test``s into logical units using ``TestSuite``s
+You can group your ``Test``s into logical units using ``TestSuite``s.
+
+[source, java]
+----
+import io.github.olib963.javatest.Testable.TestSuite;
+
+import java.util.stream.Stream;
+
+import static io.github.olib963.javatest.JavaTest.*;
+
+public class MyFirstTestSuite {
+
+    public static TestSuite mySuite() {
+        return suite("MyTests", Stream.of(
+                test("Simple Test", () -> that(true, "Expected test to pass"))
+        ));
+    }
+}
+----
+
+==== Suite Classes
+
+A common use case will be to use a class to store your tests, to do this simply implement `TestSuiteClass`. Your class
+will then be able to be used anywhere you would use a `Testable` e.g. adding to another `TestSuite` or passing
+to JavaTests run functions. The name of the suite will be the name of the class.
 
 [source, java]
 ----
@@ -297,10 +321,9 @@ import io.github.olib963.javatest.Testable;
 
 import java.util.stream.Stream;
 
-import static io.github.olib963.javatest.JavaTest.test;
-import static io.github.olib963.javatest.JavaTest.that;
+import static io.github.olib963.javatest.JavaTest.*;
 
-public class MyFirstTestSuite implements TestSuiteClass {
+public class ClassAsSuite implements TestSuiteClass {
 
     @Override
     public Stream<Testable> testables() {
@@ -312,29 +335,29 @@ public class MyFirstTestSuite implements TestSuiteClass {
 }
 ----
 
-==== Suite Names
+==== Suite Nesting
 
-By default a `TestSuite` will just use its own class name as the suite name, making ``Test``s easier to locate. You can however
-change this behaviour if you wish:
+``TestSuite``s contain ``Testable``s not ``Test``s and thus can even be contain other ``TestSuite``s.
 
 [source, java]
 ----
-import io.github.olib963.javatest.TestSuiteClass;
-import io.github.olib963.javatest.Testable;
+
+import io.github.olib963.javatest.Testable.TestSuite;
 
 import java.util.stream.Stream;
 
-public class MyCustomTestSuite implements TestSuiteClass {
-//    @Override
-//    public String name() {
-//        return "MySuite";
-//    }
+import static io.github.olib963.javatest.JavaTest.*;
 
-    @Override
-    public Stream<Testable> testables() {
-        return Stream.of(
-                // create tests
-        );
+public class SuiteOfSuites {
+
+    // A suite composed of one test and one suite
+    public static TestSuite compositeSuite() {
+        return suite("MyComposedTests",
+                Stream.of(
+                        test("Simple Test", () -> that(true, "Expected test to pass")),
+                        MyFirstTestSuite.mySuite(),
+                        new ClassAsSuite()
+                ));
     }
 }
 ----
@@ -388,7 +411,7 @@ public class MyRunners {
             test("Simple test", () -> pending())));
 
     public TestRunner suiteTestsNoLogging = testableRunner(
-            Stream.of(new MyFirstTestSuite(), new MyCustomTestSuite()),
+            Stream.of(MyFirstTestSuite.mySuite(), new ClassAsSuite()),
             Collections.emptyList() // No observers so no logging
     );
 
@@ -523,7 +546,7 @@ import io.github.olib963.javatest.*;
 import static io.github.olib963.javatest.JavaTest.*;
 
 TestResults runTest(CheckedSupplier<Assertion> testFn) {
-    return runTests(Stream.of(test("JShell test", testFn)));
+    return runTests(test("JShell test", testFn));
 }
 ----
 
