@@ -6,17 +6,16 @@ import io.github.olib963.javatest.Testable;
 
 import java.util.stream.Stream;
 
-public class MyCustomTestSuite implements TestSuiteClass {
-//    @Override
-//    public String name() {
-//        return "MySuite";
-//    }
+import static io.github.olib963.javatest.JavaTest.*;
+
+public class ClassAsSuite implements TestSuiteClass {
 
     @Override
     public Stream<Testable> testables() {
         return Stream.of(
-                // create tests
+                test("Simple Test", () -> that(true, "Expected test to pass"))
         );
     }
+
 }
 // end::include[]
